@startuml Classes

class Map {}

class Coordinate {}

class GameObject {}

class Entity {}

class Unit {}

class Building {}

class Resource {}

class Player {}

class GameController {}

Map -- GameObject
Map -- Coordinate
Coordinate -- GameObject
GameObject <|-- Entity
Entity <|-- Unit
Entity <|-- Building
GameObject <|-- Resource
Player -- GameController
GameController -- Map

@enduml